force-app/main/default/objects/PCI_Access_Event__e/PCI_Access_Event__e.object-meta.xml
<CustomObject>
    <description>Platform Event for PCI DSS Requirement 10 - Tracks all access to cardholder data. Creates immutable audit trail that survives transaction rollbacks.</description>
    <label>PCI Access Event</label>
    <pluralLabel>PCI Access Events</pluralLabel>
</CustomObject>