force-app/main/default/objects/PCI_Access_Event__e/fields/Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Access_Type__c</fullName>
    <description>Type of access performed (Query, Insert, Update, Delete, View, Access Denied)</description>
    <label>Access Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>