force-app/main/default/objects/PCI_Access_Event__e/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <description>Source IP address of the access request (PCI DSS 10.2)</description>
    <label>IP Address</label>
    <length>45</length>
    <type>Text</type>
</CustomField>