force-app/main/default/objects/PCI_Access_Event__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>ID of the record containing cardholder data that was accessed</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>