force-app/main/default/objects/PCI_Access_Event__e/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <description>Salesforce session ID for correlation with login events</description>
    <label>Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>