force-app/main/default/objects/PCI_Access_Event__e/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Exact timestamp when access occurred (PCI DSS 10.2)</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>