force-app/main/default/objects/PCI_Access_Event__e/fields/User_Action__c.field-meta.xml
<CustomField>
    <fullName>User_Action__c</fullName>
    <description>Detailed description of the action performed on cardholder data</description>
    <label>User Action</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>