force-app/main/default/objects/PCI_Access_Event__e/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>ID of the user who accessed the cardholder data (PCI DSS 10.1)</description>
    <label>User Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>