force-app/main/default/objects/PCI_Access_Event__e/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Username of the user who accessed the data for audit readability</description>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>